# auth-service/docs/swagger.yaml
@@ -15,6 +15,15 @@ definitions:
       updated_at:
         type: string
     type: object
+  auth-service_internal_domain.GroupInfo:
+    properties:
+      id:
+        type: string
+      member_count:
+        type: integer
+      name:
+        type: string
+    type: object
   auth-service_internal_domain.GroupMember:
     properties:
       created_at:
@@ -33,6 +42,25 @@ definitions:
         type: string
       user_id:
         type: string
+    type: object
+  auth-service_internal_domain.InvitationResponse:
+    properties:
+      group:
+        $ref: '#/definitions/auth-service_internal_domain.GroupInfo'
+      group_id:
+        type: string
+      id:
+        type: string
+      inviter:
+        $ref: '#/definitions/auth-service_internal_domain.UserInfo'
+      member_count:
+        type: integer
+      sent_at:
+        type: string
+      shared_metrics:
+        items:
+          type: string
+        type: array
     type: object
   auth-service_internal_domain.MetricType:
     properties:
@@ -74,6 +102,15 @@ definitions:
         description: '"unverified", "verified"'
         type: string
       updated_at:
+        type: string
+    type: object
+  auth-service_internal_domain.UserInfo:
+    properties:
+      email:
+        type: string
+      id:
+        type: string
+      name:
         type: string
     type: object
   auth-service_internal_web_helpers.ErrorResponse:
@@ -546,6 +583,30 @@ paths:
       summary: Delete a group
       tags:
       - groups
+    get:
+      description: Retrieve a group by ID
+      parameters:
+      - description: Group ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/auth-service_internal_domain.Group'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/auth-service_internal_web_helpers.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get a group
+      tags:
+      - groups
     put:
       consumes:
       - application/json
@@ -886,6 +947,27 @@ paths:
       security:
       - BearerAuth: []
       summary: Update all permissions
+      tags:
+      - groups
+  /groups/invitations:
+    get:
+      description: Get current user's group invitations
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/auth-service_internal_domain.InvitationResponse'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/auth-service_internal_web_helpers.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: List group invitations
       tags:
       - groups
   /groups/metric-types:
